tests/ok/while-let-direct-enum-owner-state.ari
enum Maybe {
  None,
  Some,
}

fn make_owned(value: i64) -> own i64 {
  return value;
}

fn main() -> i64 {
  let token: own i64 = make_owned(5);
  while let Some = Some() {
    drop token;
    break;
  }
  return 0;
}
