tests/errors/ownership-temporary-tuple-field-move.ari
fn make_owned(value: i64) -> own i64 {
  return value;
}

fn make_pair() -> (own i64, i64) {
  return (make_owned(1), 2);
}

fn main() -> i64 {
  let token = make_pair().0;
  drop token;
  return 0;
}
